Corrigido o bug de descontar e somar mais de um volume, e de nao realizar retirada com o volume cheio e criado o historico;